--- a/source/css/blocks/header.css
+++ b/source/css/blocks/header.css
@@ -8,16 +8,17 @@
   background-color: transparent;
   transform: translate(-50%);
   overflow: hidden;
+  z-index: 2;
 }
 
 .header__list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin: 0 -20px;
-  padding: 10px 40px 5px 40px;
-  background-color: var(--lighttheme-background-basic);
+  padding: 10px 40px;
+  background-color: var(--background-card);
   list-style: none;
-  box-shadow: 0 0 15px var(--lighttheme-background-accent);
+  box-shadow: 0 0 15px var(--background-accent);
 }
 
 .header__link {
@@ -27,41 +28,35 @@
 
   font-size: 1rem;
   line-height: 1rem;
-  color: var(--lighttheme-text-neutral);
+  font-weight: 600;
+  color: var(--text-basic);
   text-transform: lowercase;
   text-decoration: none;
+  transition-duration: 100ms;
+  user-select: none;
 }
 
-.header__link::before {
-  content: "";
+
+.header__link:active {
+  color: var(--button);
+}
+
+.header__link-icon {
+  margin-bottom: 5px;
   width: 40px;
   height: 40px;
-  background-color: var(--lighttheme-background-basic);
-  border-radius: 10px;
-  border: 2px solid var(--lighttheme-text-placeholder);
+  border-radius: 5px;
+  color: currentColor;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
 }
 
-.header__item:last-child {
-  margin-right: 0;
-}
-
-.header__tel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: var(--lighttheme-text-neutral);
-  text-decoration: none;
-}
 
 @media (min-width: 900px) {
   .header {
-    --lighttheme-button: #f7cd5a9c;
-
-    background-color: var(--lighttheme-button);
+    background-color: var(--boxshadow);
+    margin-bottom: 40px;
   }
 
   .header__nav {
@@ -80,19 +75,18 @@
 
   .header__item {
     position: relative;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 30px;
   }
 
   .header__item::before {
     content: "";
     position: absolute;
-    top: 10px;
-    bottom: 10px;
+    top: 15px;
+    bottom: 15px;
     right: 0;
 
-    width: 1px;
-    background-color: var(--lighttheme-boxshadow);
+    width: 0.5px;
+    background-color: var(--text-placeholder);
   }
 
   .header__item:last-child::before {
@@ -100,10 +94,15 @@
   }
 
   .header__link {
+    padding: 5px;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    color: var(--text-invert);
+    text-shadow: 0 0 4px var(--textshadow-invert);
     text-transform: none;
   }
 
-  .header__link::before {
+  .header__link-icon {
     display: none;
   }
 }
