--- a/source/css/blocks/page.css
+++ b/source/css/blocks/page.css
@@ -6,10 +6,11 @@
   padding-bottom: 50px;
   min-height: 100vh;
   min-width: 320px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Nunito", sans-serif;
+  /* -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
   font-weight: 300;
-  color: var(--lighttheme-text-basic);
-  background-color: var(--lighttheme-background-basic);
+  color: var(--text-basic);
+  background-color: var(--background-page);
 }
 
 .page__main {
