--- a/source/css/scaffolding.css
+++ b/source/css/scaffolding.css
@@ -30,14 +30,14 @@ img {
 
 @media (min-width: 900px) {
   .container {
-    padding: 0 32px;
-    max-width: 1100px;
+    padding: 0 64px;
+    max-width: 1200px;
   }
 }
-
-@media (min-width: 1440px) {
+/*
+@media (min-width: 1200px) {
   .container {
     padding: 0 120px;
-    max-width: 1440px;
+    max-width: 1200px;
   }
-}
+} */
