Markup is done, except footer

--- a/source/css/blocks/header.css
+++ b/source/css/blocks/header.css
@@ -1,108 +1,10 @@
-.header__nav {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-
-  padding-top: 20px;
-  width: 100vw;
-  background-color: transparent;
-  transform: translate(-50%);
-  overflow: hidden;
-  z-index: 2;
-}
-
-.header__list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 0 -20px;
-  padding: 10px 40px;
-  background-color: var(--background-card);
-  list-style: none;
-  box-shadow: 0 0 15px var(--background-accent);
-}
-
-.header__link {
+.header__wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
 
-  font-size: 1rem;
-  line-height: 1rem;
-  font-weight: 600;
+.header__tel {
   color: var(--text-basic);
-  text-transform: lowercase;
-  text-decoration: none;
-  transition-duration: 100ms;
-  user-select: none;
-}
-
-
-.header__link:active {
-  color: var(--button);
-}
-
-.header__link-icon {
-  margin-bottom: 5px;
-  width: 40px;
-  height: 40px;
-  border-radius: 5px;
-  color: currentColor;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-}
-
-
-@media (min-width: 900px) {
-  .header {
-    background-color: var(--boxshadow);
-    margin-bottom: 40px;
-  }
-
-  .header__nav {
-    position: static;
-    padding-top: 0;
-    width: auto;
-    transform: none;
-  }
-
-  .header__list {
-    margin: 0;
-    padding: 0;
-    background-color: transparent;
-    box-shadow: none;
-  }
-
-  .header__item {
-    position: relative;
-    padding: 30px;
-  }
-
-  .header__item::before {
-    content: "";
-    position: absolute;
-    top: 15px;
-    bottom: 15px;
-    right: 0;
-
-    width: 0.5px;
-    background-color: var(--text-placeholder);
-  }
-
-  .header__item:last-child::before {
-    display: none;
-  }
-
-  .header__link {
-    padding: 5px;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    color: var(--text-invert);
-    text-shadow: 0 0 4px var(--textshadow-invert);
-    text-transform: none;
-  }
-
-  .header__link-icon {
-    display: none;
-  }
+  text-decoration-color: var(--text-underline);
 }
