--- a/source/css/blocks/book.css
+++ b/source/css/blocks/book.css
@@ -1,104 +1,64 @@
 .book {
-  margin-bottom: 60px;
+  position: relative;
+  left: -12px;
+  width: calc(100% + 24px);
+  padding: 32px 24px 40px 24px;
+  border-radius: 22px;
+  background-color: var(--background-neutral);
 }
 
-.book__title {
+.book__lead {
   margin-top: 0;
-  margin-bottom: 10px;
-  color: var(--text-neutral);
-  text-align: center;
-}
-
-.book__form-label {
-  display: block;
-  margin-bottom: 5px;
-  padding: 10px;
-}
-
-.book__form-input {
-  display: block;
-  width: 100%;
-  padding: 18px 25px 22px 25px;
-  border-radius: 100em;
-  border: none;
-  font-size: 1.6rem;
-  color: var(--text-basic);
-  box-shadow: 0 0 10px 0 var(--boxshadow);
-  outline: none;
-  transition-duration: 200ms;
-}
-
-.book__form-input::placeholder {
-  color: var(--text-placeholder);
-}
-
-.book__form-input:focus {
-  box-shadow:
-    0 0 0 2px var(--active-state),
-    0 0 15px -2px var(--boxshadow);
-  transform: scale(1.02);
-}
-
-.book__submit-wrapper {
-  padding: 10px;
-}
-
-.book__submit {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin: 0 auto;
-  padding: 18px 30px 22px 30px;
-  min-width: 260px;
-  border-radius: 100em;
-  border: none;
-  font-size: 1.8rem;
+  margin-bottom: 40px;
+  font-size: 32px;
+  line-height: 40px;
   font-weight: 700;
+}
+
+.book__form {
+  margin-bottom: 28px;
+}
+
+.book__tel {
+  display: block;
+  font-size: 24px;
+  line-height: 34px;
   color: var(--text-basic);
-  text-shadow: 0 0 4px var(--textshadow-basic);
-  white-space: nowrap;
-  background-color: var(--button);
-  box-shadow: 0 0 10px 0 var(--boxshadow);
-  outline: none;
-  transition-duration: 200ms;
-  user-select: none;
+  text-align: center;
+  text-decoration-color: var(--text-underline);
 }
 
-.book__submit:focus-visible {
-  color: var(--text-invert);
-  text-shadow: 0 0 2px var(--textshadow-invert);
-  background-color: var(--button-active);
-  box-shadow: 0 0 15px -2px var(--boxshadow);
-  transform: scale(1.02);
-}
-
-.book__submit:active {
-  color: var(--text-invert);
-  text-shadow: 0 0 2px var(--textshadow-invert);
-  background-color: var(--button-active);
-  box-shadow: 0 0 8px 0 var(--boxshadow);
-  transform: scale(0.98);
-  outline: none;
+@media (min-width: 360px) {
+  .book__lead {
+    font-size: 36px;
+  }
 }
 
 @media (min-width: 900px) {
   .book {
-    margin-bottom: 60px;
+    left: -40px;
+    padding: 40px;
+    width: calc(100% + 80px);
   }
 
-  .book__title {
-    margin-bottom: 30px;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
+  .book__lead {
+    margin-right: auto;
+    margin-bottom: 56px;
+    max-width: 670px;
   }
 
-  .book__form {
+  .book__contact-wrapper {
     display: flex;
   }
 
-  .book__form-label {
-    flex: 0 0 calc(50% - 20px);
-    margin-right: 40px;
+  .book__form {
+    flex: 0 0 47%;
+    margin-right: 120px;
+    margin-bottom: 0;
+  }
+
+  .book__tel {
+    font-size: 32px;
+    line-height: 42px;
   }
 }
