--- a/source/css/blocks/page.css
+++ b/source/css/blocks/page.css
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 0;
-  padding-bottom: 50px;
+  padding: 32px 0;
   min-height: 100vh;
   min-width: 320px;
-  font-family: "Nunito", sans-serif;
-  /* -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
-  font-weight: 300;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
   color: var(--text-basic);
-  background-color: var(--background-page);
+  background-color: var(--background-basic);
+}
+
+.page__header {
+  margin-bottom: 48px;
 }
 
 .page__main {
@@ -21,8 +25,12 @@
   margin-top: auto;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
   .page {
-    padding-bottom: 0;
+    padding-top: 40px;
+  }
+
+  .page__header {
+    margin-bottom: 64px;
   }
 }
