--- a/source/css/scaffolding.css
+++ b/source/css/scaffolding.css
@@ -33,11 +33,8 @@ img {
     padding: 0 64px;
     max-width: 1200px;
   }
-}
-/*
-@media (min-width: 1200px) {
-  .container {
-    padding: 0 120px;
-    max-width: 1200px;
+
+  .break--mobile {
+    display: none;
   }
-} */
+}
