--- a/source/css/style.css
+++ b/source/css/style.css
@@ -5,8 +5,10 @@
 @import "blocks/header.css";
 @import "blocks/main.css";
 @import "blocks/section.css";
-@import "blocks/book.css";
+@import "blocks/form.css";
+@import "blocks/service.css";
+@import "blocks/result.css";
 @import "blocks/review.css";
+@import "blocks/book.css";
 @import "blocks/footer.css";
-
 @import "blocks/splide.min.css";
