--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,3 +1,4 @@
+@import "fonts.css";
 @import "normalize.css";
 @import "variables.css";
 @import "scaffolding.css";
@@ -11,4 +12,4 @@
 @import "blocks/review.css";
 @import "blocks/book.css";
 @import "blocks/footer.css";
-@import "blocks/splide.min.css";
+@import "blocks/splide.css";
