--- a/source/css/fonts.css
+++ b/source/css/fonts.css
@@ -1,4 +1,5 @@
 @font-face {
+  font-display: swap;
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
@@ -9,6 +10,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
