--- a/source/css/blocks/form.css
+++ b/source/css/blocks/form.css
@@ -1,3 +1,29 @@
+@keyframes shake-label {
+  0% {
+    left: 10px;
+  }
+
+  10% {
+    left: 5px;
+  }
+
+  25% {
+    left: 15px;
+  }
+
+  40% {
+    left: 5px;
+  }
+
+  60% {
+    left: 15px;
+  }
+
+  100% {
+    left: 10px;
+  }
+}
+
 .form {
   display: flex;
   flex-wrap: wrap;
@@ -46,17 +72,46 @@
   position: absolute;
   top: 50%;
   left: 18px;
+  right: 18px;
+  transform-origin: 0 0;
   transform: translateY(-60%);
   font-size: 18px;
-  line-height: 18px;
+  line-height: 22px;
+  transition-property: top, transform;
   transition-duration: 400ms;
 }
 
 .form__input:focus ~ .form__label-text,
 .form__input:not(:placeholder-shown) ~ .form__label-text {
-  top: -22px;
-  left: 2px;
-  transform: translateY(0) scale(0.8);
+  top: 2px;
+  transform: translateY(-100%) scale(0.8);
+}
+
+.form__label-text--error {
+  top: 6px;
+  left: 10px;
+  right: -20%;
+  transform: translateY(-100%) scale(0.8);
+  color: var(--error);
+  white-space: nowrap;
+  transition: none;
+  animation-name: shake-label;
+  animation-duration: 400ms;
+}
+
+.form__input:focus ~ .form__label-text--error,
+.form__input:not(:placeholder-shown) ~ .form__label-text--error {
+  top: 6px;
+}
+
+.form__label-text-accent {
+  display: none;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+.form__label-text--error .form__label-text-accent {
+  display: block;
 }
 
 .form__reset {
@@ -140,7 +195,6 @@
   background-color: var(--background-basic);
 }
 
-
 .form__submit-wrapper {
   flex: 1 0 200px;
   margin-right: 12px;
@@ -148,52 +202,5 @@
 }
 
 .form__submit {
-  display: block;
   margin: 0 auto;
-  padding: 17px 19px 21px 19px;
-  width: 100%;
-  min-width: 208px;
-  border-radius: 16px;
-  border: none;
-  font-size: 18px;
-  line-height: 18px;
-  color: var(--text-basic);
-  white-space: nowrap;
-  background-color: var(--accent);
-  outline-offset: 2px;
-  user-select: none;
-  touch-action: none;
-  cursor: pointer;
-}
-
-.form__submit:focus:not(:focus-visible) {
-  outline: none;
-}
-
-.form__submit:focus-visible {
-  outline: auto;
-}
-
-.form__submit:active {
-  opacity: 0.6;
-}
-
-.form__tel-link {
-  display: block;
-  margin: 0 auto;
-  padding: 19px;
-  width: 100%;
-  min-width: 200px;
-  border-radius: 16px;
-  font-size: 18px;
-  line-height: 18px;
-  text-align: center;
-  color: var(--text-basic);
-  text-decoration: none;
-  background-color: var(--accent);
-  outline-offset: 2px;
-  white-space: nowrap;
-  user-select: none;
-  touch-action: none;
-  cursor: pointer;
 }
