--- a/source/css/blocks/page.css
+++ b/source/css/blocks/page.css
@@ -25,6 +25,16 @@
   margin-top: auto;
 }
 
+.page__popup {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  z-index: 100;
+}
+
 @media (min-width: 900px) {
   .page {
     padding: 40px 0;
