--- a/source/css/variables.css
+++ b/source/css/variables.css
@@ -7,6 +7,8 @@
   --text-underline: hsl(0, 0%, 77%);
   --background-basic: hsl(0, 0%, 100%);
   --background-neutral: hsl(0, 0%, 94%);
+  --background-popup: hsla(0, 0%, 0%, 0.7);
   --input-border: hsl(0, 0%, 87%);
   --accent: hsl(44, 91%, 66%);
+  --error: hsl(7, 100%, 48%);
 }
