--- a/source/css/blocks/form.css
+++ b/source/css/blocks/form.css
@@ -47,7 +47,7 @@
 
 .form__input {
   display: block;
-  padding: 16px 18px 16px 18px;
+  padding: 16px 18px;
   width: 100%;
   color: var(--text-basic);
   font-size: 18px;
